crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-06.stderr
TOML parse error at line 1, column 73
  |
1 | bad-uni-esc-06 = "This string contains a non scalar unicode codepoint \uD801"
  |                                                                         ^
invalid value, expected unicode hexadecimal value
